<resources>
    <string name="app_name">Runit</string>
    <string name="intro_text">Hi! Let\'s track daily cumulative steps. Use the menu to explore additional actions.</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="permission_rationale">Location data is used as part of the Google Fit API</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="action_autho">Authorization</string>
    <string name="read_step_data">Read Data Today</string>
    <string name="read_step_data_history_steps">Read Steps data History</string>
    <string name="read_step_data_history_calorie">Read Calorie data History</string>
    <string name="read_step_data_history_heartPoint">Read HeartPoint data History</string>
    <string name="title_activity_history">HistoryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
