<!--
Copyright 2016 Google, Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

 http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <item android:id="@+id/action_autho"
        android:title="@string/action_autho"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_read_data_daily"
        android:title="@string/read_step_data"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_read_data_histoy_steps"
        android:title="@string/read_step_data_history_steps"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_read_data_histoy_calorie"
        android:title="@string/read_step_data_history_calorie"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_read_data_histoy_heartPoint"
        android:title="@string/read_step_data_history_heartPoint"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_test"
        android:title="Insert Weight"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_Hyd"
        android:title="Insert Water"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_last_seven_days_data"
        android:title="Get Last 7Days Steps"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
